chore: Add support for refactors in rp

--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -9,7 +9,8 @@
         { "type": "fix", "section": "Fixes" },
         { "type": "docs", "section": "Documentation" },
         { "type": "release", "section": "Release"},
-        { "type": "chore", "section": "Miscellaneous chores"}
+        { "type": "chore", "section": "Miscellaneous chores"},
+        { "type": "refactor", "section": "Code refactoring"}
       ]
     }
   },
