chore: Update rp config

--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -6,6 +6,7 @@
       "include-component-in-tag": false,
       "changelog-sections": [
         { "type": "feat", "section": "Features" },
+        { "type": "Feat", "section": "Features" },
         { "type": "fix", "section": "Fixes" },
         { "type": "docs", "section": "Documentation" },
         { "type": "release", "section": "Release"},
